# notquiteparadise

./: .buildinfo  .coverage  .gitignore  .sonarcloud.properties  CONTRIBUTING.md  README.md  _sonar-project.properties  bitbucket-pipelines.yml  chronicle.html  codecov.yml  coverage.xml  debug.html  engine.py  genindex.html  index.html  key.html  library.html  license.txt  modules.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  radon.cfg  requirements.txt  savegame.dat.bak  scripts.engine.core.html  scripts.engine.html  scripts.engine.internal.html  scripts.engine.systems.html  scripts.engine.ui.elements.html  scripts.engine.ui.html  scripts.engine.ui.widgets.html  scripts.engine.widgets.html  scripts.engine.world_objects.html  scripts.html  scripts.nqp.actions.html  scripts.nqp.html  scripts.nqp.processors.html  (+12 more)
.doctrees/: environment.pickle  index.doctree  modules.doctree  scripts.doctree  scripts.engine.core.doctree  scripts.engine.doctree  scripts.engine.internal.doctree  scripts.engine.systems.doctree  scripts.engine.ui.doctree  scripts.engine.ui.elements.doctree  scripts.engine.ui.widgets.doctree  scripts.engine.widgets.doctree  scripts.engine.world_objects.doctree  scripts.nqp.actions.doctree  scripts.nqp.doctree  scripts.nqp.processors.doctree  scripts.nqp.ui_elements.doctree  tests.doctree  tests.engine.doctree  tests.mocks.doctree  tests.nqp.doctree
.doctrees/engine/: _engine.doctree
.doctrees/info/: _info.doctree  content_guide.doctree  design_notes.doctree  developer_guide.doctree
.doctrees/nqp/: _nqp.doctree  action.doctree  chronicle.doctree  component.doctree  core.constants.doctree  core.definitions.doctree  core.extend_json.doctree  core.queries.doctree  core.store.doctree  core.systems.doctree  debug.doctree  (+12 more)
Data/: ENG.json  save_game.json
_modules/: index.html
_sources/: index.rst.txt  modules.rst.txt  scripts.engine.core.rst.txt  scripts.engine.internal.rst.txt  scripts.engine.rst.txt  scripts.engine.systems.rst.txt  scripts.engine.ui.elements.rst.txt  scripts.engine.ui.rst.txt  scripts.engine.ui.widgets.rst.txt  scripts.engine.widgets.rst.txt  scripts.engine.world_objects.rst.txt  scripts.nqp.actions.rst.txt  scripts.nqp.processors.rst.txt  scripts.nqp.rst.txt  scripts.nqp.ui_elements.rst.txt  scripts.rst.txt  tests.engine.rst.txt  tests.mocks.rst.txt  tests.nqp.rst.txt  tests.rst.txt  ui.rst.txt
_static/: pygments.css
assets/: asset_license.txt  fix_png.py
docs/: GameDesignDocument.docx  chronicle.rst  component.rst  conf.py  core.rst  effect.rst  event_handlers.rst  index.rst  managers.rst  requirements.txt  skills.rst  ui.rst  ui_elements.rst  world.rst  world_objects.rst
engine/: _engine.html
info/: _info.html  content_guide.html  design_notes.html  developer_guide.html
nqp/: _nqp.html  action.html  chronicle.html  component.html  core.constants.html  core.definitions.html  core.extend_json.html  core.queries.html  core.store.html  core.systems.html  debug.html  dungen.html  effect.html  key.html  library.html  state.html  systems.html  thought.html  ui.elements.html  ui.widgets.html  utility.html  world.html  world_objects.html
reference/: GameDesignDocument.docx  NQP_log_formating.xml  NQP_log_formatting.xml  combat_modelling.xlsx  ~WRL2635.tmp
scripts/: __main__.py
(+1316 files in other folders)
