[tool.poetry]
name = "notquiteparadise"
version = "0.1.0"
description = ""
authors = ["Snayff"]

[tool.poetry.dependencies]
python = "^3.8"
snecs = "^1.2.1"
pygame = "2.0.0dev10"
pygame-gui = "^0.5.6"
pytweening = "^1.0.3"
tcod = "^11.13.1"
scipy = "^1.4.1"

[tool.poetry.dev-dependencies]
sphinx = "^3.0.4"
mypy = "^0.780"
vulture = "^1.5"
isort = "^4.3.21"
black = "^19.10b0"
pytest = "^5.4.3"
pytest-cov = "^2.10.1"
sphinx_autodoc_typehints = "^1.11.0"
radon = "^4.1.0"
sphinx-autodoc-annotation = "^1.0-1"
sphinx-autodoc-typehints = "^1.11.0"
sphinx-git = "^11.0.0"
sphinx-rtd-theme = "^0.5.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120
known_third_party = [""]
known_future_library = ["annotations"]
force_to_top = ["typing, __future__"]
indent = 4
lines_between_types = 0

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

