[tool.poetry]
name = "notquiteparadise"
version = "0.1.0"
description = ""
authors = ["Snayff"]

[tool.poetry.dependencies]
python = "^3.8"
snecs = "^1.2.1"
pygame = "2.0.0.dev10"
pygame-gui = "^0.5.6"
pytweening = "^1.0.3"
tcod = "^11.18.0"
scipy = "^1.4.1"


[tool.poetry.dev-dependencies]
sphinx = "^3.3.1"
mypy = "^0.790"
vulture = "^2.1"
isort = "^5.6.4"
black = "^20.8b1"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
sphinx_autodoc_typehints = "^1.11.0"
sphinx-autodoc-annotation = "^1.0-1"
sphinx-autodoc-typehints = "^1.11.0"
sphinx-git = "^11.0.0"
codecov = "^2.1.10"
pytest-benchmark = {extras = ["histogram"], version = "^3.2.3"}
sphinx-material = {git = "https://github.com/bashtage/sphinx-material.git"}

[tool.black]
target-version = ['py38']
line-length = 120

[tool.isort]
force_alphabetical_sort_within_sections = true
include_trailing_comma = true
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true
line_length = 120
indent = 4
lines_between_types = 0

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

